@@ -1,3 +1,9 @@
+2006-11-20  Dave Lehman  <dlehman@redhat.com>
+	* src/system-config-kdump.py:
+	improve consistency WRT freezing/thawing of widgets (#215991)
+	* po/*:
+	update strings for translation
+
 2006-10-27  Dave Lehman  <dlehman@redhat.com>
 	* src/system-config-kdump.py:
 	remove #!/usr/bin/python
